Added scrolling textures to sides

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="script.js" defer></script>
     </head>
     <body>
+        <aside id="left"></aside>
         <main>
             <section>
                 <h1>Earnings Counter</h1>
@@ -25,6 +26,7 @@
                 <h2>You have earned: </h2>
                 <p id="counter">$0.00</p>
             </section>
-        </main>        
+        </main> 
+        <aside id="right"></aside>
     </body>
 </html>
