--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
                 <p>Simply input how much you earn per hour and watch the money roll in!</p>
             </section>
             <section id="earnings-input">
-                <input id="earnings-amount" type="number" size="5" placeholder="0.00" step="0.01"/>
+                <input id="earnings-amount-input" type="number" size="5" placeholder="0.00" step="0.01"/>
+                <p id="earnings-amount-value">$0.00/hr</p>
                 <button id="start" type="button">Start</button>
             </section>
             <section id="counter-display">
